# OpenGL-Renderer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  core.h  glad.c  readme.md  run.cpp
assets/shaders/: initFS.glsl
assets/shaders/preCompute/: ambient.frag  ambient.vert  ambientNaive.frag  downCS.glsl  envBRDF.frag
assets/shaders/screenTest/: GBuffer.frag  GBuffer.vert  GBufferOld.frag  GBufferOld.vert  HiZ.comp  TAA.comp  TAA.frag  directLight.frag  directLight.vert  extract.comp  horizonalData.comp  pingPongFilter.comp  pingPongFilterHigh.comp  screen.frag  screen.vert  shadow.frag  shadowProj.frag  shadowProj.vert  shadowTemporalFilterWithOpt.comp
assets/shaders/screenTest/RT/: DDGI.frag  DDProbe.comp  basicTest.comp
assets/shaders/screenTest/SSRT/: SSGI.frag  SSR.frag  merge.frag
engine/: CMakeLists.txt  RTAsset.cpp  RTAsset.h  RTrenderer.cpp  application.cpp  application.h  asset.cpp  asset.h  buffer.cpp  buffer.h  geometry.cpp  pipeline.cpp  pipeline.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  textureInfo.h
engine/camera/: camera.cpp  camera.h  cameraControl.cpp  cameraControl.h  gameCameraControl.cpp  gameCameraControl.h  orthographicCamera.cpp  orthographicCamera.h  perspectiveCamera.cpp  perspectiveCamera.h  trackBallCameraControl.cpp  trackBallCameraControl.h
scripts/: createORM.py  testIBL.py
tools/: CMakeLists.txt  LTC.h  hash.h  image.cpp  image.h  matrix.cpp  matrix.h  modelLoader.cpp  modelLoader.h
wrapper/: chechError.cpp  checkError.h
